--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a href="#portofolio" class="text-base lg:text-white text-dark py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
                             </li>
                             <li class="group">
-                                <a href="#sertificate" class="text-base lg:text-white text-dark py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
+                                <a href="#contact" class="text-base lg:text-white text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -376,6 +376,14 @@
                     <p>kp.rawakidang</p>
                     <p>Tangerang</p>
                 </div>
+
+                <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
+                    <h3 class="font-bold text-2xl text-white mb-2">Lorem</h3>
+                    <p>lorem</p>
+                    <p>lorem</p>
+                    <p>lorem</p>
+                </div>
+                
 
             </div>
 
