--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="asset/to-do-listv2.png" alt="Iproject name" width="w-full">
+                        <img src="asset/to-do-list.png" alt="Iproject name" width="w-full">
                     </div>
                     <h3 class="font-semibold text-dark text-xl mt-5 mb-3">To do list</h3>
                     <p class="font-medium text-base mb-5 ">project sederhana ini dibangun dengan html tailwindcss dan javascrip,web ini dirancang untuk melakukan list apa
